Fix user review issue - Remove quotes - Truncate bike name

--- a/BikeWale.UI/css/home.css
+++ b/BikeWale.UI/css/home.css
@@ -639,6 +639,10 @@
 	margin-bottom: 8px;
 }
 
+.review-card__bike.text-truncate {
+	text-align: center;
+}
+
 .review-card__desc {
 	color: #787878;
 	margin-bottom: 8px;
