--- a/BikeWale.UI/m/css/bwm-newbikes.css
+++ b/BikeWale.UI/m/css/bwm-newbikes.css
@@ -310,6 +310,10 @@
 	margin-bottom: 5px;
 }
 
+.review-card__bike.text-truncate {
+	text-align: center;
+}
+
 .review-card__desc {
 	color: #787878;
 	margin-bottom: 8px;
